--- a/plugin.xml
+++ b/plugin.xml
@@ -16,7 +16,7 @@
   </js-module>
 
   <!--<dependency id="org.apache.cordova.device" url="https://git-wip-us.apache.org/repos/asf/cordova-plugin-device.git" commit="master" subdir="." />-->
-  <dependency id="cordova-plugin-device" url="https://git-wip-us.apache.org/repos/asf/cordova-plugin-device.git" commit="master" subdir="." />
+  <dependency id="cordova-plugin-device" url="https://github.com/apache/cordova-plugin-device.git" commit="master" subdir="." />
   
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
